rnsc/test_data/rns_integration/error/parser/type_hints/class/no_operand_recovers.rns
.class   @class       ; no operand provided
yahoooooo ; <- should be still reported as an error